// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`BackButton > should not redirect to given url when disabled 1`] = `
<div>
  <button
    class="css-1g24tay"
    disabled=""
  >
    <div
      class="mx-auto css-15txs7d"
      height="10"
      width="10"
    >
      <svg
        id="chevron-left-small"
        viewBox="0 0 10 10"
        x="0"
        xml:space="preserve"
        xmlns="http://www.w3.org/2000/svg"
        y="0"
      >
        <path
          d="M6.938 9l-3.8-3.8c-.1-.1-.1-.3 0-.4l3.8-3.8"
          fill="none"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
        />
      </svg>
    </div>
  </button>
</div>
`;

exports[`BackButton > should not redirect to previous page when disabled 1`] = `
<div>
  <button
    class="css-1g24tay"
    disabled=""
  >
    <div
      class="mx-auto css-15txs7d"
      height="10"
      width="10"
    >
      <svg
        id="chevron-left-small"
        viewBox="0 0 10 10"
        x="0"
        xml:space="preserve"
        xmlns="http://www.w3.org/2000/svg"
        y="0"
      >
        <path
          d="M6.938 9l-3.8-3.8c-.1-.1-.1-.3 0-.4l3.8-3.8"
          fill="none"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
        />
      </svg>
    </div>
  </button>
</div>
`;

exports[`BackButton > should render 1`] = `
<div>
  <button
    class="css-1i1c5eg"
  >
    <div
      class="mx-auto css-15txs7d"
      height="10"
      width="10"
    >
      <svg
        id="chevron-left-small"
        viewBox="0 0 10 10"
        x="0"
        xml:space="preserve"
        xmlns="http://www.w3.org/2000/svg"
        y="0"
      >
        <path
          d="M6.938 9l-3.8-3.8c-.1-.1-.1-.3 0-.4l3.8-3.8"
          fill="none"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
        />
      </svg>
    </div>
  </button>
</div>
`;

exports[`BackButton > should render when disabled 1`] = `
<div>
  <button
    class="css-1g24tay"
    disabled=""
  >
    <div
      class="mx-auto css-15txs7d"
      height="10"
      width="10"
    >
      <svg
        id="chevron-left-small"
        viewBox="0 0 10 10"
        x="0"
        xml:space="preserve"
        xmlns="http://www.w3.org/2000/svg"
        y="0"
      >
        <path
          d="M6.938 9l-3.8-3.8c-.1-.1-.1-.3 0-.4l3.8-3.8"
          fill="none"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
        />
      </svg>
    </div>
  </button>
</div>
`;
